Fix z-index

--- a/src/javascript/routes/default/style.styl
+++ b/src/javascript/routes/default/style.styl
@@ -1,7 +1,8 @@
 #user-feed {
     display: flex;
     position: fixed;
-    top: 24px;
+    top: 72px;
+    z-index: 12000;
     right: 0;
     font-size: 14px;
     border-bottom-left-radius: 4px;
